<android.support.constraint.ConstraintLayout
    android:id="@+id/movieItemParent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/movie_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="centerCrop"
        android:transitionName="@string/movie_transition"
        app:layout_constraintDimensionRatio="H,2:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/grid_info_height"
        android:background="#88000000"
        android:ellipsize="none"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:paddingEnd="48dp"
        android:paddingLeft="8dp"
        android:paddingRight="48dp"
        android:paddingStart="8dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/grid_info_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/favoriteIv"
        android:layout_width="@dimen/grid_info_height"
        android:layout_height="@dimen/grid_info_height"
        android:contentDescription="@string/favorite"
        android:onClick="@{(view) -> presenter.onClickFavorite(view)}"
        android:padding="@dimen/image_padding"
        app:layout_constraintBottom_toBottomOf="@+id/title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_star_border_white_24px" />
</android.support.constraint.ConstraintLayout>